vamos a terminar CRUD sin ast
